"Added marked dependency, updated package.json and package-lock.json, modified index.html and style.css to include markdown support and dark mode styling, and updated history.json"

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>-
 
+
+// shaiv yahi miluga 12 bje tak live share pe
+
 <body>
   <h1>Gemini ChatBot</h1>
   <button id="toggle-dark-mode" onclick="toggleDarkMode()">Dark Mode</button>
@@ -25,6 +28,8 @@
   <div id="output">
     <!-- AI generated output will be here -->
   </div>
+
+
 
   <script type="importmap">
       {
