--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <div class="container">
         <h1>Gemini ChatBot</h1>
         <div class="input-group">
