added loading indicator for gemini responses

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -18,6 +18,9 @@
             <button id="clearHistory" onclick="clearHistory()">Clear History</button>
         </div>
         <div id="output" class="output-container"></div>
+         <div id="loadingIndicator" class="loading-indicator" style="display: none;">
+            Loading...
+        </div>
     </div>
 
     <div class="history-container" id="historyContainer" style="display: none;">
