--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gemini ChatBot</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
