defined START, END of files in comments

--- a/backend/public/gemini.html
+++ b/backend/public/gemini.html
@@ -1,3 +1,5 @@
+<!-- START of gemini.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -60,3 +62,5 @@
 </body>
 
 </html>
+
+<!-- END of gemini.html -->
