'logged in as session username!' is displayed at top now

--- a/backend/public/gemini.html
+++ b/backend/public/gemini.html
@@ -15,7 +15,7 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <div class="container">
-        <i> logged in !</i>
+        <i> logged in as <span id="username"></span>!</i>
         <h1>Gemini ChatBot
 
             <form action="/logout" method="POST">
